--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Battleship</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="board" id="playerboard"></div>
+        <div class="board" id="computerboard"></div>
+    </div>
 </body>
 </html>
