--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div class="board" id="playerboard"></div>
         <div class="board" id="computerboard"></div>
     </div>
+    <script src="./scripts.js"></script>
 </body>
 </html>
