Add drag and drop (not complete)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="board" id="playerboard"></div>
         <div class="board" id="computerboard"></div>
     </div>
+    <div class="template" id="ship5" draggable="true" ondragstart="drag(event, 5, 'v')"></div>
+    <div class="template" id="ship4" draggable="true" ondragstart="drag(event, 4, 'v')"></div>
+    <div class="template" id="ship3" draggable="true" ondragstart="drag(event, 3, 'v')"></div>
+    <div class="template" id="ship21" draggable="true" ondragstart="drag(event, 2, 'v')"></div>
+    <div class="template" id="ship22" draggable="true" ondragstart="drag(event, 2, 'v')"></div>
     <script src="./scripts.js"></script>
 </body>
 </html>
