--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="template" id="ship3" draggable="true" ondragstart="drag(event, 3, 'v')"></div>
     <div class="template" id="ship21" draggable="true" ondragstart="drag(event, 2, 'v')"></div>
     <div class="template" id="ship22" draggable="true" ondragstart="drag(event, 2, 'v')"></div>
+    <button id="start" onclick="startButton()">Start</button>
     <script src="./scripts.js"></script>
 </body>
 </html>
