--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <div class="template" id="ship3" draggable="true" ondragstart="drag(event, 3)"></div>
     <div class="template" id="ship21" draggable="true" ondragstart="drag(event, 2)"></div>
     <div class="template" id="ship22" draggable="true" ondragstart="drag(event, 2)"></div>
-    <button id="start" onclick="startButton()">Start</button>
-    <input type="radio" id="vertical" name="orientation" value="v" checked="checked">
-    <label for="vertical">Vertical</label>
-    <input type="radio" id="horizontal" name="orientation" value="h">
-    <label for="horizontal">Horizontal</label>
+    <div id="menu">
+        <input type="radio" id="vertical" name="orientation" value="v" checked="checked">
+        <label for="vertical">Vertical</label>
+        <input type="radio" id="horizontal" name="orientation" value="h">
+        <label for="horizontal">Horizontal</label>
+        <button id="start" onclick="startButton()">Start</button>
+    </div>
     <script src="./scripts.js"></script>
 </body>
 </html>
