--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <div id="container">
-        <div class="board" id="playerboard"></div>
-        <div class="board" id="computerboard"></div>
+        <div class="duo">
+            <h1>Your board</h1>
+            <div class="board" id="playerboard"></div>
+        </div>
+        <div class="duo">
+            <h1>Computer's board</h1>
+            <div class="board" id="computerboard"></div>
+        </div>
     </div>
+    <div id="menuwrapper"></div>
     <script src="./scripts.js"></script>
 </body>
 </html>
